# LIT_Test

./: .dockerignore  .env.sample  Dockerfile  LIT.postman_collection.json  Makefile  README.md  docker-compose.yaml  pyproject.toml
nginx/: nginx.conf
task_backend_1/: manage.py
task_backend_1/celeryapp/: celery.py
task_backend_1/task_backend_1/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
task_backend_1/templates/: otp_activation.html
task_backend_1/users/: managers.py  models.py  serializers.py  tasks.py  views.py
task_backend_1/users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_auto_20240329_1653.py  0004_auto_20240330_1418.py  0005_alter_user_otp_code.py
